# titan-builder-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-25-titan-builder-mcp.md
docs/superpowers/specs/: 2026-03-25-titan-builder-mcp-design.md
src/: config.rs  main.rs
src/rpc/: client.rs  types.rs
src/tools/: cancel_bundle.rs  get_bundle_stats.rs  mod.rs  send_blobs.rs  send_bundle.rs  send_raw_tx.rs
