[package]
name = "titan-builder-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Titan Builder — Ethereum block builder"
license = "MIT"
repository = "https://github.com/VPC-byte/titan-builder-mcp"
keywords = ["mcp", "mev", "ethereum", "titan-builder"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
